generator client {
    provider = "prisma-client-js"
}

datasource db {
    provider = "mysql"
    url      = env("DATABASE_URL")
}

model Diet {
    id          String      @id @default(uuid())
    name        String      @db.VarChar(255)
    createdAt   DateTime    @default(now())
    updatedAt   DateTime    @updatedAt
    foods       Food[]
    reptiles    Reptile[]
}

model Food {
    id          String      @id @default(uuid())
    dietId      String?     @db.VarChar(255)
    name        String      @db.VarChar(255)
    createdAt   DateTime    @default(now())
    updatedAt   DateTime    @updatedAt
    diet        Diet?       @relation(fields: [dietId], references:[id])
}

model Order {
    id          String      @id @default(uuid())
    name        String      @db.VarChar(255)
    description String      @db.Text
    createdAt   DateTime    @default(now())
    updatedAt   DateTime    @updatedAt
    lineages    Lineage[]
    
}

model Lineage {
    id          String      @id @default(uuid())
    orderId     String?     @db.VarChar(255)
    name        String      @db.VarChar(255)
    description String      @db.Text
    createdAt   DateTime    @default(now())
    updatedAt   DateTime    @updatedAt
    order       Order?      @relation(fields: [orderId], references:[id])
}

enum activePeriodEnum {
    undefined
    nocturnal
    diurnal
}

enum reproductionEnum {
    undefined
    viviparous
    ovoviviparous
    ectotherm
}

enum maintenanceEnum {
    undefined
    high
    low
    medium
}

model Reptile {
    id                      String              @id @default(uuid())
    dietId                  String?             @db.VarChar(255)
    name                    String              @db.VarChar(255)
    activeAt                activePeriodEnum    @default(undefined)
    formOfReproduction      reproductionEnum    @default(undefined)
    size                    String              @db.VarChar(10)
    lifespan                Int                 @db.Int
    maintenanceLevel        maintenanceEnum     @default(undefined)
    createdAt               DateTime            @default(now())
    updatedAt               DateTime            @updatedAt
    diet                    Diet?               @relation(fields: [dietId], references:[id])
}