@startuml

hide circle
skinparam linetype ortho

entity "Reptile" as reptile {
  **id : string <<generated>> **
  --
  * **dietId : string <<FK>>**
  * **lineageId : string <<FK>>**
  *name : text
  *activeAt : activePeriodEnum
  *formOfReproduction: reproductionEnum
  *size: string;
  *lifespan: number
  *maintenanceLevel: maintenanceEnum
  *createdAt: date
  *updatedAt: date
}

entity "Order" as order {
  * **id : string <<generated>> **
  --
  *name : text
  *description: text
  *createdAt: date
  *updatedAt: date
}

entity "Lineage" as lineage {
  * **id : string <<generated>> **
  --
  * **orderId : string <<FK>> **
  *name : text
  *description: text
  *createdAt: date
  *updatedAt: date
}

entity "Diet" as diet {
  * **id : string <<generated>> **
  --
  *name : text
  *createdAt: date
  *updatedAt: date
}

entity "Food" as food {
  * **id : string <<generated>> **
  --
  * **dietId: string <<FK>>**
  *name : text
  *createdAt: date
  *updatedAt: date
}

reptile }o-|| diet
reptile ||--|| lineage
order ||-|{ lineage
diet ||--|{ food

@enduml
